@@ -1,3 +1,12 @@
+2008-02-24  David Hansen  <david.hansen@gmx.net>
+
+	* sb-heise.el (shimbun-heise-wash-telepolis-article): relax ad
+	filtering regexp.
+
+	* sb-spiegel.el (shimbun-spiegel-content-start): Follow page layout
+	changes.
+	(shimbun-spiegel-x-face-alist): New variable.
+
 2008-01-29  David Engster  <dengste@eml.cc>
 
 	* sb-debugmagazin-de.el, sb-perlentaucher-de.el, sb-slashdot.el
